ingress-practice/backend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  namespace: ns-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080 # Note: The app listens on 8080 internally
