ingress-practice/virtual-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: fan-out-ingress
  namespace: ns-test
spec:
  ingressClassName: nginx 
  rules:
  - host: example.com
    http:
      paths:
      - path: /frontend
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
        pathType: ImplementationSpecific
      - path: /backend
        backend:
          service:
            name: backend-svc
            port:
              number: 80
        pathType: ImplementationSpecific
